[package]
name = "ip_pool"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
env_logger = "0.11.10"
redis = { version = "1.2.3", features = ["aio", "connection-manager", "tokio-comp"]}
log = "0.4.32"
reqwest = { version = "0.12.28", features = ["socks"] }
scraper = "0.27.0"
tokio = { version = "1.52.3", features = ["rt", "time"] }
